test/conformance/chainsaw/generating-policies/template/generate-ciliumnetworkpolicy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cnp-template-ns
  labels:
    scrape-port: "9965"
