test/conformance/chainsaw/generating-policies/template/generate-ciliumnetworkpolicy/permissions.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:ciliumnetworkpolicies-template
  labels:
    rbac.kyverno.io/aggregate-to-background-controller: "true"
rules:
- apiGroups:
  - cilium.io
  resources:
  - ciliumnetworkpolicies
  verbs:
  - get
  - list
  - watch
  - create
  - update
  - delete
