test/conformance/chainsaw/generating-policies/template/generate-ciliumnetworkpolicy/crd-assert.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: ciliumnetworkpolicies.cilium.io
status:
  (conditions[?type == 'Established']):
  - status: 'True'
