test/conformance/chainsaw/generating-policies/template/generate-ciliumnetworkpolicy/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generate-ciliumnetworkpolicy-template
spec:
  concurrent: false
  steps:
  - name: install CiliumNetworkPolicy CRD
    try:
    - apply:
        file: crd.yaml
    - assert:
        file: crd-assert.yaml
  - name: create permissions
    try:
    - apply:
        file: permissions.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: generate-cilium-scrape-policy
  - name: create namespace
    try:
    - apply:
        file: namespace.yaml
  - name: check that the CiliumNetworkPolicy is generated
    try:
    - assert:
        file: cnp-assert.yaml
